removed accidental data from repository, and adjusting .gitignore to new paths

--- a/.gitignore
+++ b/.gitignore
@@ -24,15 +24,13 @@ host/old/dados/*
 *.bak
 *.uvgui.*
 *.dep
-webserver/html/mesh
-webserver/dados/
-webserver/keys/
+dados/
 mod-python/
 .DS_Store
 */.DS_Store
 "Icon\r"
-webserver/dados/
-webserver/keys/device_key.pem
-webserver/keys/device_key.pub
-webserver/keys/model
-webserver/keys/serial
+keys/device_key.pem
+keys/device_key.pub
+keys/model
+keys/serial
+phantomjs-*
