--- a/html/css/package.json
+++ b/html/css/package.json
@@ -1,8 +1,11 @@
 {
   "name": "mod-boostrap",
+  "author": "MOD Team",
   "description": "grunt task for compiing MOD's css",
+  "repository": "moddevices/mod-ui",
   "dependencies": {
     "grunt": "~0.4.5",
+    "grunt-cli": "0.1.13",
     "grunt-contrib-watch": "~0.6.1",
     "jit-grunt" : "0.9.1",
     "grunt-contrib-less": "1.0.1",
