--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ Pillow==2.8.1
 pyserial==2.7
 pystache==0.5.4
 tornado==4.1
-http://github.com/dlitz/pycrypto/tarball/v2.7a1#egg=pycrypto-2.7a1
-aggdraw==1.2.1
+git+git://github.com/dlitz/pycrypto@master#egg=pycrypto
+aggdraw==1.3.7
