--- a/html/css/package.json
+++ b/html/css/package.json
@@ -9,6 +9,6 @@
     "grunt-contrib-watch": "~0.6.1",
     "jit-grunt": "0.9.1",
     "grunt-contrib-less": "1.0.1",
-    "bootstrap": "3.3.5"
+    "bootstrap": "~3.4.1"
   }
 }
