--- a/html/css/package.json
+++ b/html/css/package.json
@@ -4,11 +4,12 @@
   "description": "grunt task for compiing MOD's css",
   "repository": "moddevices/mod-ui",
   "dependencies": {
+    "bootstrap": "~3.4.1",
     "grunt": "~0.4.5",
-    "grunt-cli": "0.1.13",
+    "grunt-cli": "^0.1.13",
+    "grunt-contrib-less": "1.0.1",
     "grunt-contrib-watch": "~0.6.1",
     "jit-grunt": "0.9.1",
-    "grunt-contrib-less": "1.0.1",
-    "bootstrap": "~3.4.1"
+    "liftoff": "^4.0.0"
   }
 }
